--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "laravel-echo": "^1.15.3",
-        "pusher-js": "^8.3.0"
+        "pusher-js": "^8.3.0",
+        "react-dom": "^18.2.0"
     }
 }
